--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <%= yield %>
+
+    <footer class="container text-center">
+      Build with ❤️ in Pāuatahanui, Pōneke by <a href="https://joshmcarthur.com">Josh McArthur</a>
+    </footer>
   </body>
 </html>
