Feature: Pico to Tailwind + DaisyUI to speed up UI

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <body class="d-flex flex-column min-vh-100">
     <%= yield %>
 
-    <footer class="container text-center">
+    <footer class="container text-center mx-auto">
       Build with ❤️ in Pāuatahanui, Pōneke by <a href="https://joshmcarthur.com">Josh McArthur</a>
     </footer>
   </body>
