Use DaisyUI navbar

--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,11 +1,3 @@
-<nav class="container">
-  <ul>
-    <li><strong>Open Register of Penuciary Interests</strong></li>
-  </ul>
-  <ul>
-    <li><a href="<%= root_path %>">Home</a></li>
-    <li><a href="<%= individuals_path %>">Individuals</a></li>
-    <li><a href="<%= interests_path %>">Interests</a></li>
-    <li><a href="<%= about_path %>">About</a></li>
-  </ul>
-</nav>
+<div class="navbar bg-base-100 shadow-sm">
+  <a class="btn btn-ghost text-xl" href="<%= root_path %>">Open Register of Penuciary Interests</a>
+</div>
