Update footer style

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,10 @@
   <body class="d-flex flex-column min-vh-100">
     <%= yield %>
 
-    <footer class="container text-center mx-auto">
-      Build with ❤️ in Pāuatahanui, Pōneke by <a href="https://joshmcarthur.com">Josh McArthur</a>
+    <footer class="container mx-auto py-8 mt-auto">
+      <div class="text-center text-base-content/60 text-sm">
+        <p>Built with ❤️ in Pāuatahanui, Pōneke by <a href="https://joshmcarthur.com" class="link link-primary hover:link-hover">Josh McArthur</a></p>
+      </div>
     </footer>
   </body>
 </html>
