Feature: Support identifying jurisdictions by slug

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -38,7 +38,7 @@
         </div>
         <p class="text-base-content/70">Current MPs and their declared interests</p>
         <div class="card-actions justify-end mt-4">
-          <button class="btn btn-primary btn-sm">Browse</button>
+          <a href="<%= political_entities_path(jurisdiction: 'new-zealand-parliament') %>" class="btn btn-primary btn-sm">Browse</a>
         </div>
       </div>
     </div>
