Feature: Add interests list view with filters

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -53,7 +53,7 @@
         </div>
         <p class="text-base-content/70">Find who has stakes in specific companies</p>
         <div class="card-actions justify-end mt-4">
-          <button class="btn btn-secondary btn-sm">Search</button>
+          <a href="<%= interests_path %>" class="btn btn-secondary btn-sm">Search</a>
         </div>
       </div>
     </div>
