--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -14,8 +14,8 @@
         </p>
 
         <div class="w-full max-w-xxl mx-auto">
-          <%= form_with url: search_path, method: :get, html: { role: "search", class: "join w-full shadow-lg" } do |f| %>
-            <%= f.search_field :query,
+          <%= form_with url: interests_path, method: :get, html: { role: "search", class: "join w-full shadow-lg" } do |f| %>
+            <%= f.search_field :q,
                 placeholder: "Search by MP name, electorate, company, or interest type...",
                 class: "input input-bordered join-item flex-1 text-lg h-14" %>
             <%= f.submit "Search", class: "btn btn-primary join-item h-14 px-8 text-lg" %>
