Fix: Use correct class name for a placeholder avatar

--- a/app/views/political_entities/show.html.erb
+++ b/app/views/political_entities/show.html.erb
@@ -20,7 +20,7 @@
                   </div>
                 </div>
               <% else %>
-                <div class="avatar placeholder">
+                <div class="avatar avatar-placeholder">
                   <div class="bg-neutral text-neutral-content rounded-2xl w-32 h-32 shadow-lg">
                     <span class="text-4xl font-bold">
                       <%= @political_entity.name.first.upcase %>
