Feature: Add comparison feature

--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -68,7 +68,7 @@
         </div>
         <p class="text-base-content/70">Aggregate analysis across political parties</p>
         <div class="card-actions justify-end mt-4">
-          <button class="btn btn-accent btn-sm">Compare</button>
+          <%= link_to "Compare", comparison_index_path, class: "btn btn-accent btn-sm" %>
         </div>
       </div>
     </div>
