--- a/app/views/political_entities/show.html.erb
+++ b/app/views/political_entities/show.html.erb
@@ -134,8 +134,8 @@
                               <span>Source Information</span>
                             </li>
                             <li><span class="text-sm">Source: <%= interest.source.name %></span></li>
-                            <% if interest.source_page_numbers.present? && interest.source_page_numbers != "[]" %>
-                              <li><span class="text-sm">Pages: <%= interest.source_page_numbers %></span></li>
+                            <% if interest.source_page_numbers&.any? %>
+                              <li><span class="text-sm">(page <%= interest.source_page_numbers.to_sentence %>)</span></li>
                             <% end %>
                             <li><span class="text-sm">Jurisdiction: <%= interest.jurisdiction.name %></span></li>
                             <% if interest.metadata.present? && interest.metadata.any? %>
@@ -154,15 +154,14 @@
                       <div class="flex flex-wrap gap-2">
                         <div class="badge badge-primary badge-sm">
                           <%= interest.source.name %>
-                          <% if interest.source.year.present? %>
+                          <% if interest.source.year.present? && interest.source.name.exclude?(interest.source.year.to_s) %>
                             (<%= interest.source.year %>)
                           <% end %>
+                          <% if interest.source_page_numbers&.any? %>
+                            (page <%= interest.source_page_numbers.to_sentence %>)
+                          <% end %>
                         </div>
-                        <% if interest.source_page_numbers.present? && interest.source_page_numbers != "[]" %>
-                          <div class="badge badge-secondary badge-sm">
-                            Pages: <%= interest.source_page_numbers %>
-                          </div>
-                        <% end %>
+
                         <% if interest.metadata.present? && interest.metadata.any? %>
                           <div class="badge badge-accent badge-sm">
                             Additional Data
@@ -204,10 +203,16 @@
                           <li class="menu-title">
                             <span>Source Information</span>
                           </li>
-                          <li><span class="text-sm">Source: <%= interest.source.name %></span></li>
-                          <% if interest.source_page_numbers.present? && interest.source_page_numbers != "[]" %>
-                            <li><span class="text-sm">Pages: <%= interest.source_page_numbers %></span></li>
-                          <% end %>
+                          <li><span class="text-sm">
+                            Source: <%= interest.source.name %>
+                             <% if interest.source.year.present? && interest.source.name.exclude?(interest.source.year.to_s) %>
+                              (<%= interest.source.year %>)
+                            <% end %>
+                            <% if interest.source_page_numbers&.any? %>
+                              (page <%= interest.source_page_numbers.to_sentence %>)
+                            <% end %>
+                          </span>
+                          </li>
                           <li><span class="text-sm">Jurisdiction: <%= interest.jurisdiction.name %></span></li>
                           <% if interest.metadata.present? && interest.metadata.any? %>
                             <li class="menu-title">
@@ -225,15 +230,13 @@
                     <div class="flex flex-wrap gap-2">
                       <div class="badge badge-primary badge-sm">
                         <%= interest.source.name %>
-                        <% if interest.source.year.present? %>
+                        <% if interest.source.year.present? && interest.source.name.exclude?(interest.source.year.to_s) %>
                           (<%= interest.source.year %>)
                         <% end %>
+                        <% if interest.source_page_numbers&.any? %>
+                          (page <%= interest.source_page_numbers.to_sentence %>)
+                        <% end %>
                       </div>
-                      <% if interest.source_page_numbers.present? && interest.source_page_numbers != "[]" %>
-                        <div class="badge badge-secondary badge-sm">
-                          Pages: <%= interest.source_page_numbers %>
-                        </div>
-                      <% end %>
                       <% if interest.metadata.present? && interest.metadata.any? %>
                         <div class="badge badge-accent badge-sm">
                           Additional Data
@@ -337,11 +340,14 @@
                 The following sources were used to compile interest declaration data:
               </div>
               <div class="flex flex-wrap gap-2">
-                <% @political_entity.interests.joins(:source).distinct.pluck('sources.name', 'sources.year').each do |source_name, year| %>
+                <% @political_entity.interests.joins(:source).distinct.pluck('sources.name', 'sources.year', 'interests.source_page_numbers').each do |source_name, year, source_page_numbers| %>
                   <div class="badge badge-primary badge-sm">
                     <%= source_name %>
-                    <% if year.present? %>
+                    <% if year.present? && source_name.exclude?(year.to_s) %>
                       (<%= year %>)
+                    <% end %>
+                    <% if source_page_numbers&.any? %>
+                      (page <%= source_page_numbers.to_sentence %>)
                     <% end %>
                   </div>
                 <% end %>
