--- a/app/assets/tailwind/application.css
+++ b/app/assets/tailwind/application.css
@@ -7,3 +7,22 @@
 @plugin "daisyui" {
   themes: emerald --default, dark --prefersdark;
 }
+
+@plugin "daisyui/theme" {
+  name: "dark";
+  prefersdark: true;
+  --color-primary: oklch(76.662% .135 153.45);
+  --color-primary-content: oklch(33.387% .04 162.24);
+  --color-secondary: oklch(61.302% .202 261.294);
+  --color-secondary-content: oklch(100% 0 0);
+  --color-accent: oklch(72.772% .149 33.2);
+  --color-accent-content: oklch(0% 0 0);
+  --color-info: oklch(72.06% .191 231.6);
+  --color-info-content: oklch(0% 0 0);
+  --color-success: oklch(64.8% .15 160);
+  --color-success-content: oklch(0% 0 0);
+  --color-warning: oklch(84.71% .199 83.87);
+  --color-warning-content: oklch(0% 0 0);
+  --color-error: oklch(71.76% .221 22.18);
+  --color-error-content: oklch(0% 0 0);
+}
