Feature: Provide data source information on political entity page

--- a/app/views/political_entities/show.html.erb
+++ b/app/views/political_entities/show.html.erb
@@ -357,7 +357,7 @@
 
           <!-- General Attribution -->
           <div class="p-4 bg-base-200 rounded-lg">
-            <div class="font-semibold mb-2">About This Data</div>
+            <div class="font-semibold mb-2">Attribution</div>
             <div class="text-sm text-base-content/70 space-y-2">
               <p>
                 Profile images are sourced from Wikimedia Commons and are used under their respective
@@ -382,4 +382,6 @@
           class: "btn btn-primary" %>
     </div>
   </div>
+
+  <%= render "application/data_source_information" %>
 </div>
